# BetterDesk

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.console  Dockerfile.server  README.md  betterdesk-docker.sh  betterdesk.ps1  betterdesk.sh  docker-compose.quick.yml  docker-compose.single.yml  docker-compose.yml  docker-entrypoint.sh
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: docker-publish.yml  release-client.yml  release-server.yml  secret-scan.yml
betterdesk-agent-client/: index.html  package.json  tsconfig.json  vite.config.ts
betterdesk-agent-client/src/: App.tsx  main.tsx
betterdesk-agent-client/src-tauri/: Cargo.toml  tauri.conf.json
betterdesk-agent-client/src-tauri/nsis/languages/: pl.nsh
betterdesk-agent-client/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  privileges.rs  registration.rs  sysinfo_collect.rs
betterdesk-agent/agent/: config.go
betterdesk-mgmt/: chat-window.html  index.html  package.json  vite.config.ts
betterdesk-mgmt/src/: App.tsx  chat-window-entry.tsx
betterdesk-mgmt/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
betterdesk-mgmt/src-tauri/capabilities/: default.json
betterdesk-mgmt/src-tauri/nsis/: installer-hooks.nsi
betterdesk-mgmt/src-tauri/nsis/languages/: pl.nsh
betterdesk-mgmt/src-tauri/protos/: message.proto  rendezvous.proto
betterdesk-mgmt/src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  tray.rs
betterdesk-mgmt/src-tauri/src/activity/: mod.rs  session.rs  tracker.rs  uploader.rs
betterdesk-mgmt/src-tauri/src/automation/: command_channel.rs  mod.rs  script_runner.rs
betterdesk-mgmt/src-tauri/src/capture/: mod.rs
betterdesk-mgmt/src-tauri/src/cdap/: automation.rs  connection.rs  desktop.rs  files.rs  heartbeat.rs  manifest.rs  mod.rs  network_mgmt.rs  protocol.rs  security.rs  sysmanage.rs  terminal.rs
betterdesk-mgmt/src-tauri/src/chat/: mod.rs
betterdesk-mgmt/src-tauri/src/clipboard/: mod.rs
betterdesk-mgmt/src-tauri/src/codec/: mod.rs
betterdesk-mgmt/src-tauri/src/config/: mod.rs  secure_store.rs  settings.rs
betterdesk-mgmt/src-tauri/src/crypto/: bd_e2e.rs  exchange.rs  keys.rs  mod.rs  secretbox.rs
betterdesk-mgmt/src-tauri/src/dataguard/: file_watcher.rs  mod.rs  policy_enforcer.rs  usb_monitor.rs
betterdesk-mgmt/src-tauri/src/discovery/: mdns.rs  mod.rs  scanner.rs
betterdesk-mgmt/src-tauri/src/file_transfer/: browser.rs  mod.rs  receiver.rs  sender.rs
betterdesk-mgmt/src-tauri/src/helpdesk/: mod.rs  ticket_client.rs
betterdesk-mgmt/src-tauri/src/identity/: device.rs  mod.rs
betterdesk-mgmt/src-tauri/src/input/: mod.rs
betterdesk-mgmt/src-tauri/src/inventory/: collector.rs  diff.rs  hardware.rs  history.rs  mod.rs  software.rs
betterdesk-mgmt/src-tauri/src/management/: mod.rs
betterdesk-mgmt/src-tauri/src/network/: bd_registration.rs  bd_relay.rs  incoming.rs  mod.rs  registration.rs  relay.rs  session.rs  signal.rs
betterdesk-mgmt/src-tauri/src/proto/: hbb.rs
betterdesk-mgmt/src-tauri/src/protocol/: codec.rs  mod.rs
betterdesk-mgmt/src-tauri/src/remote/: clipboard_sync.rs  file_transfer_session.rs  input_pipeline.rs  mod.rs  quality_monitor.rs  session_manager.rs  session_recorder.rs  video_pipeline.rs
betterdesk-mgmt/src-tauri/src/service/: mod.rs
betterdesk-server/: main.go
betterdesk-server/api/: auth_handlers.go  bd_mgmt_handlers.go  bd_mgmt_handlers_test.go  branding_handlers.go  cdap_handlers.go  chat_handlers.go  client_api_handlers.go  org_handlers.go  role_handlers.go  server.go  server_test.go
betterdesk-server/auth/: jwt.go  permissions.go  roles.go
betterdesk-server/config/: config.go  tls.go
betterdesk-server/db/: database.go  postgres.go  postgres_org.go  sqlite.go  sqlite_org.go
betterdesk-server/relay/: server.go  ws.go
betterdesk-server/signal/: handler.go  server.go  ws.go
docker/: console-entrypoint.sh  entrypoint.sh  supervisord.conf
docs/: AUDIT_2026-03-28.md  AUDIT_BETTERDESK_2026-04-17.md  BETTERDESK_3.0_ROADMAP.md  DOCKER_TROUBLESHOOTING.md  PATCH_PLAN_2026-04-18.md  PRE_RELEASE_CHECKLIST.md  SYNOLOGY_INSTALLATION.md
docs/cdap/: AGENT_GUIDE.md  API_REFERENCE.md  BRIDGE_GUIDE.md  OVERVIEW.md  PROTOCOL.md
docs/features/: RBAC_PHASE52.md
docs/new_agents/: client1.md  client2.md
docs/sdk/: EXAMPLES.md  NODEJS_SDK.md  OVERVIEW.md  PYTHON_SDK.md  STUDIO_GUIDE.md
docs/security/: AUDIT_LOG.md  COMPLIANCE.md  ENCRYPTION_SPEC.md  THREAT_MODEL.md
docs/setup/: HTTPS_SETUP.md
tasks/: PHASE_2_5_STATUS.md  agent-operational-plan.md  lessons.md
web-nodejs/: package.json  server.js  test-db.js
web-nodejs/config/: config.js
web-nodejs/lang/: ar.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt.json  ro.json  ru.json  sv.json  th.json  tr.json  uk.json  (+3 more)
(+212 files in other folders)
