[package]
name = "betterdesk-agent-client"
version = "1.0.0"
edition = "2021"
description = "BetterDesk Agent Client — lightweight endpoint device agent"
license = "Proprietary"

[lib]
name = "betterdesk_agent_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
rand = "0.8"
hostname = "0.4"
whoami = "1"
machine-uid = "0.5"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
keyring = "3"
url = "2"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
