[package]
name = "betterdesk-mgmt"
version = "1.0.0"
edition = "2021"
description = "BetterDesk MGMT Client — operator and admin remote management console"
license = "Proprietary"

[lib]
name = "betterdesk_mgmt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "fs", "process", "signal"] }
tokio-util = "0.7"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
dirs = "5"
mime_guess = "2"
rand = "0.8"
bytes = "1"
hostname = "0.4"
whoami = "1"
machine-uid = "0.5"

# Protobuf
prost = "0.13"

# Crypto — NaCl-compatible (matches RustDesk's sodiumoxide)
crypto_box = "0.9"
xsalsa20poly1305 = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"

# Networking
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
futures-util = "0.3"
sys-locale = "0.3"
mdns-sd = "0.11"
keyring = "3"
url = "2"
urlencoding = "2"

# Screen capture (cross-platform: DXGI/X11/CGDisplay)
scrap = "0.5"

# Image encoding (JPEG frames for remote desktop stream)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# System inventory (cross-platform HW info)
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }

# Child process timeout (for PowerShell software scan)
wait-timeout = "0.2"

# Input simulation (cross-platform)
enigo = { version = "0.2", features = ["serde"] }

# Clipboard sync
arboard = "3"

# Video codec
# vpx-sys = "0.4"    # TODO: VP9 encoding/decoding (requires libvpx)
openh264 = "0.6"

# File opener
open = "5"

# Platform-specific: elevated privilege detection
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_Shutdown",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true           # Strip debug symbols and DWARF info
opt-level = "s"        # Optimize for size (balance between "z" and speed)
lto = true             # Link-Time Optimization across crates
codegen-units = 1      # Single codegen unit for maximum optimization
panic = "abort"        # Abort on panic (smaller than unwinding)
